--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box1.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                 </div>
                             </div>
                             <div class="products__card-container">
@@ -96,7 +96,7 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box2.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                 </div>
                             </div>
                             <div class="products__card-container">
@@ -110,7 +110,7 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box3.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                 </div>
                             </div>
                             <div class="products__card-container">
@@ -124,10 +124,10 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box4.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                 </div>
                             </div>
-                            <div class="products__container">
+                            <div class="products__card-container">
                                 <h2 class="products__title">Проект Prime</h2>
                                 <p class="products__text">Маркетинг</p>
                             </div>                            
@@ -138,10 +138,10 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box5.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                 </div>
                             </div>
-                            <div class="products__container">
+                            <div class="products__card-container">
                                 <h2 class="products__title">Проект Boxes</h2>
                                 <p class="products__text">Приложение</p>
                             </div> 
@@ -152,7 +152,7 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box6.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                 </div>
                             </div>
                             <div class="products__card-container">
@@ -166,7 +166,7 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box7.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                 </div>
                             </div>
                             <div class="products__card-container">
@@ -180,7 +180,7 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box8.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов. -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.
                                 </div>
                             </div>
                             <div class="products__card-container">
@@ -194,7 +194,7 @@
                             <div class="products__thumb">
                                 <img src="./images/portfolio/box9.jpg" alt="" width="370" height="294">
                                 <div class="products__overlay">
-                                    <!-- <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p> -->
+                                    <p class = "products__overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
                             </div>
                             <div class="products__card-container">
